change name of figure label

--- a/article/article.tex
+++ b/article/article.tex
@@ -420,7 +420,7 @@ More generally, we see differences in trends on a larger scale, particularly ass
 \begin{figure}[h]
 	\includegraphics{../ch5-bbs-detectability/output/plots/OVENpoint-vs-detectability-map.png}
 	\caption{Difference in trend between the VARPROP and POINT model (i.e., VARPROP - POINT; A) and the DETECT and POINT model (i.e., DETECT - POINT; B).}
-	\label{fig:route-change}
+	\label{fig:point-vs-detectability}
 \end{figure}
 
 \section{Discussion}
